# bunker_auto

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  frames_2026-02-26_15.45.22.gv  frames_2026-02-26_16.02.07.gv  frames_2026-02-27_10.34.03.gv  frames_2026-02-27_10.41.44.gv  frames_2026-02-27_14.15.33.gv  frames_2026-03-05_16.04.33.gv  frames_2026-03-06_13.32.53.gv  frames_2026-03-09_10.36.17.gv  frames_2026-03-10_09.49.44.gv  frames_2026-03-10_09.54.54.gv  frames_2026-03-12_14.37.22.gv  frames_2026-03-12_14.43.02.gv  plan.md  plan_obsv1.md  plan_obsv2(modi).md  plan_obsv2.md  plan_tf.md  plan_tfv1.md  plan_tfv2.md  plan_tfv3.md  plan_v12.md  plan_v13.md  plan_v14.md  research.md  run_all.sh
logs/: bunker_motor_raw_20260225_164544.csv  bunker_motor_raw_20260225_164639.csv  bunker_segment_avg_20260225_164544.csv  bunker_segment_avg_20260225_164639.csv  ekf_yaw_probe_20260227_145841.csv  ekf_yaw_probe_20260227_150812.csv  ekf_yaw_probe_20260227_153228.csv
logs/run_20260318_105521/: spin_yaw_probe.jsonl  spin_yaw_probe.summary.json
logs/run_20260318_131836/: spin_yaw_probe.jsonl  spin_yaw_probe.summary.json
logs/run_20260318_140601/: spin_yaw_probe.jsonl  spin_yaw_probe.summary.json
logs/run_20260318_142405/: spin_yaw_probe.jsonl  spin_yaw_probe.summary.json
logs/run_20260318_152622/: spin_yaw_probe.jsonl  spin_yaw_probe.summary.json
rl_pid_logs/: pid_policy_20260226_160137.csv  pid_policy_20260226_162306.csv  pid_policy_20260226_165207.csv  pid_policy_20260227_084154.csv  pid_policy_20260227_093549.csv  pid_policy_20260227_095326.csv  pid_policy_20260227_095633.csv  pid_policy_20260227_095739.csv  pid_policy_20260227_095835.csv  pid_policy_20260227_095933.csv  pid_policy_20260227_101304.csv  pid_policy_20260227_103402.csv  pid_policy_20260227_104133.csv  pid_policy_20260227_110403.csv  pid_policy_20260227_132501.csv  pid_policy_20260227_134125.csv  pid_policy_20260227_134409.csv  pid_policy_20260227_135235.csv  pid_policy_20260227_144709.csv  pid_policy_20260227_150811.csv  pid_policy_20260227_153144.csv  pid_policy_20260227_160344.csv  pid_policy_20260303_094438.csv  pid_policy_20260303_130442.csv  pid_policy_20260303_131829.csv  pid_policy_20260303_132453.csv  pid_policy_20260303_132913.csv  pid_policy_20260303_133914.csv  pid_policy_20260303_134529.csv  pid_policy_20260303_134930.csv  pid_policy_20260303_135238.csv  pid_policy_20260303_135420.csv  pid_policy_20260303_140254.csv  pid_policy_20260303_140832.csv  pid_policy_20260303_141020.csv  pid_policy_20260303_153025.csv  pid_policy_20260303_153342.csv  pid_policy_20260303_155051.csv  pid_policy_20260303_161955.csv  pid_policy_20260303_170708.csv  (+102 more)
src/bunker_ros2/bunker_base/launch/: bunker_base.launch.py
src/bunker_ros2/bunker_base/src/: bunker_base_node.cpp  bunker_base_ros.cpp
src/bunker_sim/: CMakeLists.txt  package.xml
src/bunker_sim/launch/: bunker_gz.launch.py
src/bunker_sim/models/bunker_tracked/: model.config  model.sdf
src/bunker_sim/worlds/: empty.sdf
src/camera_imu_pipeline_cpp/: CMakeLists.txt  package.xml
src/camera_imu_pipeline_cpp/launch/: imu_pipeline_cpp.launch.py
src/camera_imu_pipeline_cpp/src/: camera_imu_bias_corrector.cpp
src/ec25_gps_bridge/: package.xml  setup.cfg  setup.py
src/ec25_gps_bridge/ec25_gps_bridge/: ec25_navsat_bridge.py
src/ec25_gps_bridge/launch/: ec25_gps_bridge.launch.py
src/ec25_gps_bridge/resource/: ec25_gps_bridge
src/livox_pointcloud_filter/: CMakeLists.txt  package.xml
src/livox_pointcloud_filter/launch/: dynamic_object_filter.launch.py
src/livox_pointcloud_filter/src/: depth_nav_filter_node.cpp  dynamic_object_filter_node.cpp  livox_pointcloud_filter_node.cpp
src/livox_ros_driver2/: CMakeLists.txt
src/livox_timestamp_offset/: package.xml  setup.cfg  setup.py
src/livox_timestamp_offset/launch/: livox_timestamp_offset.launch.py
src/livox_timestamp_offset/livox_timestamp_offset/: livox_timestamp_offset_node.py
src/pointcloud_transform/: package.xml  setup.cfg  setup.py
src/pointcloud_transform/pointcloud_transform/: dynamic_object_filter_node.py  transform_node.py
src/realsense-ros/realsense2_camera/launch/: rs_launch.py
src/realsense-ros/realsense2_camera/src/: ros_utils.cpp
src/rl_local_controller/: CMakeLists.txt  package.xml  rl_local_controller_plugin.xml
src/rl_local_controller/include/rl_local_controller/: rl_local_controller.hpp
src/rl_local_controller/src/: rl_local_controller.cpp
src/rl_local_policy/: package.xml  setup.cfg  setup.py
src/rl_local_policy/config/: policy_linear.json
src/rl_local_policy/launch/: rl_local_policy.launch.py
src/rl_local_policy/resource/: rl_local_policy
src/rl_local_policy/rl_local_policy/: __init__.py  rl_local_policy_node.py
src/rl_pid_training/: package.xml  setup.cfg  setup.py
src/rl_pid_training/launch/: agent_pid.launch.py
src/rl_pid_training/resource/: rl_pid_training
src/rl_pid_training/rl_pid_training/: __init__.py  rl_pid_env.py  rl_pid_env_real.py  run_pid_policy.py  train_pid.py
src/robot_localization/launch/: ekf.launch.py
src/robot_localization/params/: ekf.yaml
src/rtabmap_ros/rtabmap_launch/: CMakeLists.txt  package.xml
src/rtabmap_ros/rtabmap_launch/launch/: rtabmap.launch.py  rtabmap_nav2.launch.py  sensor_sync.launch.py
src/rtabmap_ros/rtabmap_launch/launch/config/: nav2_rtabmap_params.yaml  nav2_rtabmap_params_train.yaml  nav_to_pose_replan_and_nudge.xml  rgbd.rviz
src/rtabmap_ros/rtabmap_launch/scripts/: icp_odom_cov_scale.py  map_tf_stabilizer.py  map_topic_stabilizer.py  spin_yaw_probe.py
src/temp_goal_bt/: CMakeLists.txt  package.xml
src/temp_goal_bt/include/temp_goal_bt/: pick_temporary_goal.hpp
src/temp_goal_bt/src/: pick_temporary_goal.cpp
src/traversability_layer/: CMakeLists.txt  package.xml  traversability_layer_plugin.xml
src/traversability_layer/include/traversability_layer/: traversability_layer.hpp
src/traversability_layer/src/: traversability_layer.cpp
src/ugv_sdk/src/async_port/: async_can.cpp  (+1 more)
tools/: bunker_motor_probe.py  ekf_yaw_probe.py  lidar_camera_sync_probe.py  map_event_query.py  plot_pid_policy.py
(+5 files in other folders)
