<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_imu_pipeline_cpp</name>
  <version>0.0.1</version>
  <description>Camera IMU bias correction + Madgwick filter pipeline (C++).</description>
  <maintainer email="world@example.com">world</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>imu_filter_madgwick</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
