<?xml version="1.0"?>
<package format="3">
  <name>ec25_gps_bridge</name>
  <version>0.1.0</version>
  <description>EC25 AT GPS to sensor_msgs/NavSatFix bridge</description>
  <maintainer email="atoz@example.com">atoz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
