<?xml version="1.0"?>
<package format="3">
  <name>livox_pointcloud_filter</name>
  <version>0.0.1</version>
  <description>Livox 포인트클라우드 실시간 필터(다운샘플 + ROR)</description>
  <maintainer email="world@example.com">world</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
