<?xml version="1.0"?>
<package format="3">
  <name>rl_local_controller</name>
  <version>0.0.1</version>
  <description>규칙/정책 기반 로컬 컨트롤러 플러그인</description>
  <maintainer email="world@example.com">world</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <nav2_core plugin="${prefix}/rl_local_controller_plugin.xml"/>
  </export>
</package>
