<?xml version="1.0"?>
<package format="3">
  <name>rl_pid_training</name>
  <version>0.0.1</version>
  <description>RL PID training scaffolding for cmd_vel tracking</description>
  <maintainer email="world@example.com">world</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
