<?xml version="1.0"?>
<package format="3">
  <name>temp_goal_bt</name>
  <version>0.0.1</version>
  <description>임시 목표를 생성하는 Nav2 BT 노드</description>
  <maintainer email="world@todo.todo">world</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
